Update to Java 21, use methods of SequencedCollection